--- a/portfolio.css
+++ b/portfolio.css
@@ -237,7 +237,7 @@ header img {
   display: flex;
   flex-direction: column;
   align-content: center;
-  align-items: center;
+  /* align-items: c enter; */
   text-align: center;
   padding: 50px 0px;
   gap: 20px;
