--- a/style/style.css
+++ b/style/style.css
@@ -28,19 +28,19 @@ body {
   color: white;
   background-color: var(--color-background);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow-x: hidden;
 }
 
 /* NAVIGATION */
-.nav {
-  
+.nav{
   margin-top: 20px;
   width: 100%;
   display: flex;
   padding: 0px 4em;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
-
 
 .nav h3 {
   color: var(--color-text-primary);
@@ -92,7 +92,9 @@ nav ul li a:hover::after{
     width: 100%;
     background-color: var(--color-accent-electric-blue);
 }
-
+.mobile-nav{
+  display: none;
+}
 
 /* HEADER */
 header {
@@ -237,7 +239,7 @@ header img {
   display: flex;
   flex-direction: column;
   align-content: center;
-  /* align-items: c enter; */
+  align-items: center;
   text-align: center;
   padding: 50px 0px;
   gap: 20px;
@@ -314,10 +316,56 @@ textarea:focus {
 @media (max-width: 980px) {
   nav {
     display: none;
+    
   }
+  .mobile-nav{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    height: 100vh;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 50%;
+    background-color: var(--color-accent-electric-blue);
+    transform: translateX(50vw);
+    transition-duration: 500ms;
+    color: black;
+    z-index: 100;
+    border-radius: 20px 0px 0px 20px ;
+    justify-content: center;
+    align-items: center;
+  }
+  .mobile-nav ul{
+    flex-direction: column;
+    position: inherit;
+    left: 0;
+    align-items: start;
+    height: 100%;
+    gap: 3em;
+    margin-top: 30px;
+ }
+ .mobile-nav ul li{
+  padding: 10px 20px;
+  font-size: 20px;
+  /* font-weight: bold; */
+}
+.menu-x{
+  background-color: rgba(255, 255, 255, 0.715);
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  height: 50px;
+}
+
+ .active{
+  /* display: flex; */
+  transform: translateX(0);
+ }
 
   header {
-    height: auto;
+    height: 85vh;
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
